[gd_scene load_steps=6 format=3 uid="uid://plateau_sample_importer"]

[ext_resource type="Script" path="res://samples/importer_sample.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://japanese_font" path="res://fonts/japanese_font.tres" id="2_font"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_sky"]
background_mode = 2
sky = SubResource("Sky_1")
ambient_light_source = 2
ambient_light_color = Color(0.8, 0.8, 0.8, 1)

[node name="ImporterSample" type="Node3D"]
script = ExtResource("1_script")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 100, 200)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 0, 100, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_sky")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ImportPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 130.0

[node name="Title" type="Label" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 180.0
offset_bottom = 25.0
text = "PLATEAUImporter"
horizontal_alignment = 1

[node name="ImportButton" type="Button" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 30.0
offset_right = 180.0
offset_bottom = 55.0
text = "Import GML..."

[node name="ClearButton" type="Button" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 60.0
offset_right = 180.0
offset_bottom = 85.0
text = "Clear Meshes"

[node name="SaveSceneButton" type="Button" parent="UI/ImportPanel"]
offset_left = 10.0
offset_top = 90.0
offset_right = 180.0
offset_bottom = 115.0
text = "Save as Scene..."

[node name="OptionsPanel" type="Panel" parent="UI"]
offset_left = 10.0
offset_top = 140.0
offset_right = 280.0
offset_bottom = 380.0

[node name="Title" type="Label" parent="UI/OptionsPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 260.0
offset_bottom = 25.0
text = "Extract Options"
horizontal_alignment = 1

[node name="ZoneLabel" type="Label" parent="UI/OptionsPanel"]
offset_left = 10.0
offset_top = 35.0
offset_right = 130.0
offset_bottom = 55.0
text = "Coordinate Zone:"

[node name="ZoneSpin" type="SpinBox" parent="UI/OptionsPanel"]
offset_left = 140.0
offset_top = 33.0
offset_right = 200.0
offset_bottom = 57.0
min_value = 1.0
max_value = 19.0
value = 9.0

[node name="LODLabel" type="Label" parent="UI/OptionsPanel"]
offset_left = 10.0
offset_top = 65.0
offset_right = 80.0
offset_bottom = 85.0
text = "LOD Range:"

[node name="MinLODSpin" type="SpinBox" parent="UI/OptionsPanel"]
offset_left = 90.0
offset_top = 63.0
offset_right = 140.0
offset_bottom = 87.0
max_value = 4.0
value = 1.0

[node name="LODToLabel" type="Label" parent="UI/OptionsPanel"]
offset_left = 145.0
offset_top = 65.0
offset_right = 165.0
offset_bottom = 85.0
text = " - "

[node name="MaxLODSpin" type="SpinBox" parent="UI/OptionsPanel"]
offset_left = 165.0
offset_top = 63.0
offset_right = 215.0
offset_bottom = 87.0
max_value = 4.0
value = 2.0

[node name="GranularityLabel" type="Label" parent="UI/OptionsPanel"]
offset_left = 10.0
offset_top = 95.0
offset_right = 90.0
offset_bottom = 115.0
text = "Granularity:"

[node name="GranularityOption" type="OptionButton" parent="UI/OptionsPanel"]
offset_left = 95.0
offset_top = 93.0
offset_right = 260.0
offset_bottom = 117.0

[node name="TextureCheck" type="CheckBox" parent="UI/OptionsPanel"]
offset_left = 10.0
offset_top = 125.0
offset_right = 200.0
offset_bottom = 150.0
button_pressed = true
text = "Export Textures"

[node name="CollisionCheck" type="CheckBox" parent="UI/OptionsPanel"]
offset_left = 10.0
offset_top = 155.0
offset_right = 200.0
offset_bottom = 180.0
text = "Generate Collision"

[node name="Separator" type="HSeparator" parent="UI/OptionsPanel"]
offset_left = 10.0
offset_top = 190.0
offset_right = 260.0
offset_bottom = 195.0

[node name="InfoLabel" type="Label" parent="UI/OptionsPanel"]
offset_left = 10.0
offset_top = 200.0
offset_right = 260.0
offset_bottom = 230.0
text = "PLATEAUImporter is a Node3D.
Imported meshes become children."
autowrap_mode = 2

[node name="StatsLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 390.0
offset_right = 400.0
offset_bottom = 410.0
text = "Meshes: 0 | Vertices: 0 | Triangles: 0"

[node name="LogPanel" type="Panel" parent="UI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -420.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0

[node name="Title" type="Label" parent="UI/LogPanel"]
offset_left = 10.0
offset_top = 5.0
offset_right = 390.0
offset_bottom = 25.0
text = "Log"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="UI/LogPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 400.0
offset_bottom = -10.0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LogLabel" type="RichTextLabel" parent="UI/LogPanel/ScrollContainer"]
custom_minimum_size = Vector2(380, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_font")
bbcode_enabled = true
fit_content = true
scroll_following = true

[node name="LoadingPanel" type="Panel" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="LoadingLabel" type="Label" parent="UI/LoadingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Loading..."
horizontal_alignment = 1
vertical_alignment = 1
